[DA-52/54] logout session check fix + login return fix
